@@ -1,3 +1,8 @@
+2004-11-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/ports/ucz80/spec.mk: use include and lib files from
+	  built version of sdcc instead of installed version
+
 2004-11-11 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/gen.c (toBoolean): fixed bug 1065458
